2012-04-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php,
	operation/events/events_list.php: cleaned source code style.
	
	* include/functions_events.php,
	include/functions_network_components.php,
	include/functions_api.php: fixed some things, the function
	"events_validate_event" when can't update as validate any event
	return false, into the file "functions_network_components" added
	$config['homedir'] for situations where include in a other path that
	index. And show error when make a bad validate event.
	
	MERGED FROM 4.0.2

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_forms.css
	 include/functions_themes.php: Removed bad Css files from visual 
	 styles.
	 
	 Merged from branches.

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/events/events_list.php: The column to validate events 
	is shown for an Operator (only read) user.

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_filemanager.php: Changed all messages.

2012-04-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_db.php, operation/agentes/exportdata.php:
	cleaned source code style.
	
	* include/functions_api.php: fixed prevent the empty string in the
	status into the search events.
	
	MERGED FROM 4.0.2

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php: Added sort column.

2012-04-26  Junichi Satoh  <junichi@rworks.jp>

	* general/pandora_help.php: Added meta tag to avoid mistake of
	character code recognition with multibyte characters and Google
	chrome browser.

2012-04-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* godmode/reporting/reporting_builder.php: Removed PHP notices due to a 
	deprecated argument pass by reference.

2012-04-25  Sancho Lerena <slerena@artica.es>

	* general/error_emptyconfig.php,
	general/error_authconfig.php,
	general/error_dbconfig.php: minimal changes on text to fit the error